--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,12 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300);
 
-* {
+/* * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 
     font-weight: 300;
-}
+} */
 
 body {
     font-family: 'Source Sans Pro', sans-serif;
