--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -6,25 +6,18 @@
     align-items: center;
     direction: rtl;
     padding: 12px 16px;
-    background: linear-gradient(120deg, #fce4ec, #f3e5f5);
+    background: linear-gradient(120deg, #1667e0, #f2edf3);
     box-shadow: 0 2px 10px rgba(130, 70, 200, 0.15);
     font-family: 'Varela Round', sans-serif;
     position: sticky;
     top: 0;
     z-index: 1000;
   }
-  .nav-links {
-    background-color: #7b1fa2;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-  }
+
   
   .nav-links a {
     text-decoration: none;
-    color: #7b1fa2;
+    color: black;
     font-size: 1.05rem;
     font-weight: 600;
     padding: 6px 10px;
@@ -33,17 +26,17 @@
   }
   
   .nav-links a:hover {
-    color: #c2185b;
+    color: rgb(30, 49, 155);
   }
   
   .nav-links a.active {
-    color: #ad1457;
-    border-bottom: 2px solid #f06292;
+    color: black;
+    border-bottom: 2px solid black;
   }
   .logout-btn {
-    background-color: #ff8a80;
-    color: white;
-    border: none;
+    background-color: rgba(255, 255, 255, 0.429);
+    color: black;
+    border: black 1px solid;
     padding: 6px 12px;
     border-radius: 20px;
     font-size: 1rem;
@@ -54,7 +47,7 @@
   }
   
   .logout-btn:hover {
-    background-color: #ff5252;
+    background-color: #1e1d1d5d;
   }
   .user-profile-container {
     display: flex;
@@ -77,14 +70,17 @@
   
   .user-profile-name {
     font-weight: 600;
-    color: #6a1b9a;
+    color: #0d47a1;
     font-size: 0.95rem;
     white-space: nowrap;
   }
   .leftButton{
-    background-color: aquamarine;
+    display: flex;
+    align-items: center;
   }
-  .rightProfile{
-    background-color: #ff5252;
+  .bell{
+    margin-top: 5px;
+    margin-right: 10%;
   }
+
   
