--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,12 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300);
 
-/* * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 
-    font-weight: 300;
-} */
 
 body {
     font-family: 'Source Sans Pro', sans-serif;
@@ -46,17 +40,17 @@ body {
 
 .wrapper {
     background: #50a3a2;
-    background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-    background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-    background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-    background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
+    background: -webkit-linear-gradient(top left, #50a3a2 0%, #0d47a1 100%);
+    background: -moz-linear-gradient(top left, #50a3a2 0%, #0d47a1 100%);
+    background: -o-linear-gradient(top left, #50a3a2 0%, #0d47a1 100%);
+    background: linear-gradient(to bottom right, #50a3a2 0%, #0d47a1 100%);
 
     position: absolute;
     top: 50%;
     left: 0;
     width: 100%;
-    height: 400px;
-    margin-top: -200px;
+    height: 595px;
+    margin-top: -300px;
     overflow: hidden;
 
     &.form-success {
@@ -69,6 +63,7 @@ body {
 }
 
 .container {
+    
     max-width: 600px;
     margin: 0 auto;
     padding: 80px 0;
@@ -117,7 +112,7 @@ form {
             background-color: white;
             width: 300px;
 
-            color: #53e3a6;
+            color: black;
         }
     }
 
