--- a/src/pages/tasks/Tasks.css
+++ b/src/pages/tasks/Tasks.css
@@ -69,6 +69,11 @@ body {
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
 }
+.details{
+  background-color: #04248668;
+  border: black 1px solid;
+  border-radius: 10%;
+}
 
 .add-task-button:hover {
   background-color: #2540b0;
@@ -172,6 +177,24 @@ body {
     align-items: stretch;
   }
 }
+/* tabs */
+.tabs-container {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 1rem;
+}
+.tab-button {
+  padding: 6px 12px;
+  border: none;
+  background-color: #e0e0e0;
+  cursor: pointer;
+}
+.tab-button.active {
+  background-color: #042486;
+  color: white;
+  font-weight: bold;
+}
+
 
 
 /* .page-container {
