--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -84,7 +84,6 @@ form {
     z-index: 2;
 
     input {
-        display: block;
         appearance: none;
         outline: 0;
 
@@ -115,14 +114,26 @@ form {
             color: black;
         }
     }
-
+    .sendLink {
+        background-color: #0d47a1;
+        color: white;
+        padding: 0.5rem 1rem;
+        border-radius: 8px;
+        border: none;
+        cursor: pointer;
+        display: block;
+        margin: 0 auto; /* זה שממרכז את הכפתור */
+        text-align: center;
+        width: max-content; /* כדי שהכפתור יתכווץ לתוכן ולא יתפרש */
+      }
+      
     button {
         appearance: none;
         outline: 0;
-        background-color: white;
+        background-color: #0d47a1(124, 145, 241);
         border: 0;
         padding: 10px 15px;
-        color: #53e3a6;
+        color: #101010;
         border-radius: 3px;
         width: 250px;
         cursor: pointer;
@@ -130,9 +141,15 @@ form {
         transition-duration: 0.25s;
 
         &:hover {
-            background-color: rgb(245, 247, 249);
+            background-color: rgb(162, 205, 248);
         }
     }
+}
+.forgot{
+    cursor: pointer;
+    text-decoration: underline;
+    color:rgb(0, 0, 11);
+    
 }
 
 .bg-bubbles {
