--- a/src/pages/register/Register.css
+++ b/src/pages/register/Register.css
@@ -13,7 +13,8 @@ html {
     width: 400px;
     padding: 20px;
     transform: translate(-50%, -50%);
-    background: rgba(0,0,0,.5);
+    /* background: rgba(0,0,0,.5); */
+    background: rgb(183, 236, 243);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
