--- a/src/pages/tasks/Tasks.css
+++ b/src/pages/tasks/Tasks.css
@@ -176,11 +176,16 @@ body {
     align-items: stretch;
   }
 }
-/* tabs */
-.tabs-container {
+.sub-tabs, .main-tabs {
   display: flex;
   gap: 10px;
   margin-bottom: 1rem;
+}
+
+.tabs-container {
+  display: flex;
+  flex-direction: column; 
+  gap: 10px; 
 }
 .tab-button {
   padding: 6px 12px;
