--- a/src/pages/employeeManagement/EmployeeManagement.css
+++ b/src/pages/employeeManagement/EmployeeManagement.css
@@ -1,64 +1,84 @@
 .search-input:focus {
-    border-color: #042486;
-  }
+  border-color: #042486;
+}
+.search-input-container {
+  position: relative;
+  display: inline-block;
+}
+
+.search-icon {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #666;
+  pointer-events: none;
+  z-index: 1;
+}
+
+.search-input {
+  padding: 10px 40px 10px 16px;
+  font-size: 14px;
+  border-radius: 20px;
+  border: 1.5px solid #ccc;
+  outline: none;
+  width: 250px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s ease;
+  direction: rtl;
+}
+.search-input::placeholder {
+  color: #0b0b0b9c;
+  opacity: 1; 
+}
+
+@media (max-width: 768px) {
   .search-input {
-    padding: 10px 16px;
-    font-size: 14px;
-    border-radius: 20px;
-    border: 1.5px solid #ccc;
-    outline: none;
-    width: 250px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    transition: border-color 0.3s ease;
-    direction: rtl;
-  }
-  @media (max-width: 768px) {
-    .search-input {
-      width: 100%;
-    }
-    .controls-container {
-      flex-direction: column;
-      align-items: stretch;
-    }
+    width: 100%;
   }
 
-  .actions-bar {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 10px;
+  .controls-container {
+    flex-direction: column;
+    align-items: stretch;
   }
-  
-  .add-user-btn {
-    background: #042486;
-    color: white;
-    border: none;
-    padding: 6px 12px;
-    cursor: pointer;
-    border-radius: 6px;
-  }
- 
-  .modal-overlay {
-    position: fixed;
-    top: 30%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgb(238, 237, 237);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+}
 
-  .modal-content {
-    position: relative;
-    max-height: 80vh; 
-    overflow-y: auto; 
-    height: 500px;
-    padding: 20px;
-    border-radius: 8px;
-    min-width: 400px;
-    max-width: 80%;
-  } 
-   
+.actions-bar {
+  margin-top: 2%;
+  margin-bottom: 2%;
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+}
 
-   
+.add-user-btn {
+  background: #2857e3;
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 30%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(238, 237, 237);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  position: relative;
+  max-height: 80vh;
+  overflow-y: auto;
+  height: 500px;
+  padding: 20px;
+  border-radius: 8px;
+  min-width: 400px;
+  max-width: 80%;
+}
