--- a/src/pages/report/report/Report.css
+++ b/src/pages/report/report/Report.css
@@ -1,13 +1,9 @@
 .reports-container {
     padding: 1rem;
+    margin-top:3%;
   }
   
-  .reports-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-  }
-  
+
   .reports-layout {
     display: flex;
     gap: 1rem;
@@ -52,11 +48,14 @@
     margin-bottom: 1rem;
   }
   .btn {
+    display: flex;
+    align-items: center;
     padding: 0.5rem 1rem;
     border-radius: 6px;
     color: white;
     cursor: pointer;
     border: none;
+    gap: 0.5rem;
   }
   .btn:disabled {
     background-color: #aaa;
@@ -115,6 +114,7 @@
   }
   .reports-table thead {
     background-color: #f9fafb;
+    color:blue;
   }
   .reports-table tr:hover {
     background-color: #f9f9f9;
