--- a/src/pages/tasks/Tasks.css
+++ b/src/pages/tasks/Tasks.css
@@ -22,10 +22,10 @@ body {
 .controls-container {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-between;
+  justify-content:flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
-  gap: 12px;
+  gap: 6px;
   padding: 1rem;
   background-color: #ffffff;
   border-radius: 12px;
@@ -33,12 +33,9 @@ body {
   position: relative;
 
 }
-
-
-.controls-container .add-task-button {
+.btn-add{
   display: flex;
   align-items: center;
-  margin-right: 30%;
   gap: 8px;
   background: linear-gradient(135deg, #0e45eb, #2540b0);
   color: #fff;
@@ -50,8 +47,10 @@ body {
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+
 }
-.controls-container .add-task-button:hover {
+
+.controls-container .btn-add:hover {
   background: linear-gradient(135deg, #2540b0, #0e45eb);
   transform: translateY(-2px);
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
@@ -87,7 +86,8 @@ body {
 }
 
 .search-input-container,
-.add-task-button {
+.btn-add,
+.tab-button  {
   margin-top: 10px; 
 }
 .search-input::placeholder {
@@ -131,9 +131,6 @@ body {
   border-radius: 10%;
 }
 
-.add-task-button:hover {
-  background-color: #2540b0;
-}
 /* פופאפ צדדי */
 .side-popup {
   position: fixed;
@@ -245,21 +242,25 @@ body {
   gap: 10px; 
 }
 .tab-button {
-  padding: 6px 12px;
   border: none;
   background-color: #e0e0e0;
   cursor: pointer;
 }
 .tab-button.active {
-  background-color: #1b378c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  background-color: #0e45eb;
   height: 40px;
-  border-radius: 20px;
+  padding: 12px 24px;
+  border-radius: 3px;
   width: 150px;
   color: white;
   font-weight: bold;
   box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-
 }
+
 .tab-button.arrows{
   background-color: white;
   color: black;
@@ -278,7 +279,7 @@ body {
 }
 .filters-bar {
   display: flex;
-  justify-content: space-between; /* TrashWithRecycleIcon משמאל, השאר מימין */
+  justify-content: space-between; 
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
