--- a/src/components/alertsDrawer/AlertsDrawer.css
+++ b/src/components/alertsDrawer/AlertsDrawer.css
@@ -22,7 +22,12 @@
     border-bottom: 1px solid rgba(255,255,255,0.06);
   }
   .alerts-header h3 { margin:0; font-size: 16px; }
-  .close-drawer { background: none; border: none; color: #fff; cursor:pointer; font-size: 16px; }
+  .close-drawer { 
+    background: red; 
+    border: none; 
+    color: #fff;
+     cursor:pointer;
+     font-size: 16px; }
   
   .alerts-list {
     overflow-y: auto;
@@ -58,7 +63,7 @@
   .alert-title { font-weight:700; font-size:14px; }
   .alert-time { font-size:12px; color:#aaa; }
   .alert-type { font-size:13px; margin-bottom:4px; }
-  .alert-details { font-size:12px; color:#cfcfcf; }
+  .alert-details { font-size:14px; color:#cfcfcf; }
   
   /* NavBar badge */
   .bell-btn { position: relative; background: none; border: none; cursor: pointer; color: #fff; padding:8px; }
@@ -73,4 +78,10 @@
     font-size: 12px;
     line-height: 20px;
   }
-  
+  .allAlerts{
+      text-decoration: 'underline' ;
+      color: white;
+      cursor: pointer;
+      font-size: 12px;
+      margin-right: 35%;
+  }
