--- a/src/components/goalForm/GoalForm.css
+++ b/src/components/goalForm/GoalForm.css
@@ -1,4 +1,3 @@
-/* Container עיקרי */
 .association-page-wrapper {
   height: 100vh;
   display: flex;
@@ -10,7 +9,6 @@
   overflow: hidden;
 }
 
-/* הטופס הראשי */
 .goal-form {
   width: 100%;
   max-width: 450px;
@@ -102,13 +100,12 @@
   transform: translateY(0);
 }
 
-/* אנימציות חלקות */
+/* אנימציות  */
 .goal-form__select,
 .goal-form__input {
   transform: translateZ(0);
 }
 
-/* עבור מסכים קטנים */
 @media (max-height: 700px) {
   .association-page-wrapper {
     padding: 10px;
@@ -158,19 +155,16 @@
   }
 }
 
-/* סגנון מיוחד לאופציות ריקות */
 .goal-form__select option:first-child {
   color: #7f8c8d;
   font-style: italic;
 }
 
-/* עיצוב מיוחד לשדה מספר */
 .goal-form__input[type="number"] {
   text-align: center;
   font-weight: 500;
 }
 
-/* הוספת חץ אחיד לסלקטים */
 .goal-form__select {
   background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23666"><path d="M7 10l5 5 5-5H7z"/></svg>');
   background-repeat: no-repeat;
